--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="register_saving">Registrando usuario</string>
     <string name="register_empty">Faltan campos</string>
     <string name="register_auto">Registrando usuario ...</string>
+    <string name="main_bPlay">Jugar</string>
 </resources>
