--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="play_searchGame">Nombre partida existente</string>
     <string name="play_Jugar">Jugar</string>
     <string name="play_Search">Buscar</string>
+    <string name="create_game">Creando partida ...</string>
+    <string name="localScores">Puntuación propia</string>
+    <string name="friendsScores">Puntuación amigos</string>
+    <string name="search_game">Buscando partida ...</string>
+    <string name="play_reverso">Reverso Baraja</string>
 </resources>
