Crear partida y buscar partida. Envia notificacion a los jugadores cuando se une a una partida al resto de jugadores de la misma partida. Restringido de momento solo 4 jugadores por partida.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,13 +31,23 @@
     <string name="register_empty">Faltan campos</string>
     <string name="register_auto">Registrando usuario ...</string>
     <string name="main_bPlay">Jugar</string>
-    <string name="play_newGame">Nombre partida nueva</string>
-    <string name="play_searchGame">Nombre partida existente</string>
-    <string name="play_Jugar">Jugar</string>
-    <string name="play_Search">Buscar</string>
+    <string name="play_searchGame">ID partida</string>
+    <string name="play_Jugar">Crear partida</string>
+    <string name="play_Search">Unirme</string>
     <string name="create_game">Creando partida ...</string>
     <string name="localScores">Puntuación propia</string>
     <string name="friendsScores">Puntuación amigos</string>
     <string name="search_game">Buscando partida ...</string>
-    <string name="play_reverso">Reverso Baraja</string>
+    <string name="play_reverso">Seleccionar reverso</string>
+    <string name="main_bExit">Salir</string>
+    <string name="play_gameCreated">Partida creada</string>
+    <string name="game_shareGame">Compartir partida</string>
+    <string name="game_shareText">¡Únete a esta partida de Dixit! La ID es </string>
+    <string name="game_shareSubject">Te invito a una partida de Dixit</string>
+    <string name="notifications_admin_channel_name">Nombre canal admin</string>
+    <string name="notifications_admin_channel_description">Descripcion canal</string>
+    <string name="play_emptyID">Introduce una ID de partida</string>
+    <string name="play_creatingGame">Creando partida...</string>
+    <string name="play_joiningGame">Buscando partida...</string>
+    <string name="play_gameJoined">Te has unido correctamente</string>
 </resources>
