--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -42,4 +42,38 @@
     <string name="main_bExit">Log out</string>
     <string name="play_gameCreated">Generate game</string>
     <string name="game_shareGame">Share matchID</string>
+    <string name="game_shareText">Join to this Dixit match! The ID is</string>
+    <string name="game_shareSubject">I invite you to a Dixit\'s match</string>
+    <string name="notifications_admin_channel_name">Admin channel\'s name</string>
+    <string name="notifications_admin_channel_description">Channel description</string>
+    <string name="play_emptyID">Introduce a match ID</string>
+    <string name="play_creatingGame">Creating match...</string>
+    <string name="play_joiningGame">Searching match...</string>
+    <string name="play_gameJoined">You\'ve joined correctly</string>
+    <string name="game_btn">OK</string>
+    <string name="game_id">Match ID</string>
+    <string name="game_nameJ1">playerName</string>
+    <string name="card_select">Do you choose this card?</string>
+    <string name="dialog_title">Dialog title</string>
+    <string name="ok">YES</string>
+    <string name="cancel">NO</string>
+    <string name="boton_OK">You\'ve chosen this card</string>
+    <string name="register_email">Email</string>
+    <string name="rule1">Each player starts at 0 box and with 6 cards in its hand. The rest of players are in the deck.</string>
+    <string name="rule2">In each turn a storyteller will be chosen who will choose one of the cards from your hand and write a sentence that has to do with it.</string>
+    <string name="rule3">" The other players will choose a card from their hand that best fits the storyteller's description. Then they will vote trying to guess which letter of all they think is the one with the storyteller."</string>
+    <string name="desc1">Each player starts at the 0 box with 6 cards in his hand. The rest are in the deck.</string>
+    <string name="desc2">" In each turn a storyteller will be chosen who will choose one of the cards from your hand and write a sentence that has to do with it."</string>
+    <string name="desc3">The rest of the players will choose a card from their hand that best fits the storyteller\'s description. Then they will vote trying to guess which letter of all they think is the one with the storyteller.</string>
+    <string name="head1">Preparation</string>
+    <string name="head2">Storyteller</string>
+    <string name="head3">Other players</string>
+    <string name="head4">Scores</string>
+    <string name="head5">End of the turn</string>
+    <string name="head6">End of the game</string>
+    <string name="desc6">"  The game ends when the last card is drawn.  The player who has gone the furthest on the rating scale is the winner."</string>
+    <string name="desc5">Cards played are discarded and each player\'s tile will advance as many positions as points have been scored this turn.  Then each player will draw up to 6 cards again and the role of storyteller will be passed on to the next player.</string>
+    <string name="desc4">" If all (or none) of the players have hit the storyteller's card, the storyteller receives 2 points.  The storyteller as well as the players who have hit the storyteller card receive 3 points.  In addition, all players (except the storyteller) receive 1 point for each vote their card receives."</string>
+    <string name="local">Local</string>
+    <string name="friends">Friends</string>
 </resources>
