--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -78,5 +78,5 @@
     <string name="friends">Friends</string>
     <string name="main_bAbout">About</string>
     <string name="about">About</string>
-    <string name="nombres">We are a group of students of the subject of SDM formed by: \n\n - Alberto de Arévalo Vidarte \n - Carlos Herrera Piedra \n - Juan José Gonzalez Blesa \n - David</string>
+    <string name="nombres">We are a group of students of the subject of SDM formed by: \n\n - Alberto de Arévalo Vidarte \n - Carlos Herrera Piedra \n - Juan José Gonzalez Blesa \n - David Murillo Palacios</string>
 </resources>
